[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/components/ClockComponent.gd" type="Script" id=1]
[ext_resource path="res://scenes/components/BaseComponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Light.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sounds/clock_tick1.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/clock_wait.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/clock_now.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/clock_tick2.ogg" type="AudioStream" id=7]

[node name="ClockComponent" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="NoteTimer" type="Timer" parent="." index="1"]

[node name="Light" parent="." index="2" instance=ExtResource( 3 )]
key = "a"

[node name="Wait" type="AudioStreamPlayer2D" parent="." index="3"]
stream = ExtResource( 5 )

[node name="Now" type="AudioStreamPlayer2D" parent="." index="4"]
stream = ExtResource( 6 )

[node name="Tick1" type="AudioStreamPlayer2D" parent="." index="5"]
stream = ExtResource( 4 )

[node name="Tick2" type="AudioStreamPlayer2D" parent="." index="6"]
stream = ExtResource( 7 )

[connection signal="timeout" from="NoteTimer" to="." method="_on_NoteTimer_timeout"]
